add import system

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Json Reader</string>
     <string name="share">Share File</string>
     <string name="task_pack">Template Creator Task Pack</string>
+    <string name="importPdialog">Please Wait json file importing..</string>
 </resources>
