--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="share">Share File</string>
     <string name="task_pack">Template Creator Task Pack</string>
     <string name="importPdialog">Please Wait json file importing..</string>
+    <string name="ok">ok</string>
+    <string name="addtext">addText</string>
 </resources>
